# mcptool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/libmcptool/: Cargo.toml
crates/libmcptool/src/: args.rs  auth.rs  client.rs  command.rs  common.rs  connect.rs  ctx.rs  error.rs  lib.rs  mcp.rs  output.rs  proxy.rs  storage.rs  target.rs  testserver.rs  utils.rs
crates/libmcptool/src/auth/: add.rs  list.rs  remove.rs  renew.rs
crates/libmcptool/src/calltool/: cmdline.rs  interactive.rs  json.rs  mod.rs
crates/libmcptool/src/mcp/: listtools.rs  mod.rs  ping.rs
crates/libmcptool/src/output/: calltool.rs  complete.rs  formatter.rs  getprompt.rs  initresult.rs  listprompts.rs  listresources.rs  listresourcetemplates.rs  listtools.rs  mod.rs  readresource.rs
crates/libmcptool/tests/: auth_integration.rs  ipv6_connectivity.rs  json_output.rs  json_syntax_highlighting.rs  mcp_init_integration.rs  notification_integration.rs  tcp_connectivity.rs
crates/mcptool/: Cargo.toml
crates/mcptool/src/: main.rs
examples/: ipv6_demo.rs
src/: auth.rs  common.rs  connect.rs  core.rs  lib.rs  listtools.rs  main.rs  output.rs  ping.rs  proxy.rs  storage.rs  target.rs  testserver.rs  utils.rs
src/auth/: add.rs  list.rs  remove.rs  renew.rs
src/mcp/: listtools.rs  mod.rs  ping.rs
tests/: auth_integration.rs  auth_renew_integration.rs  ipv6_connectivity.rs  tcp_connectivity.rs
