[package]
name = "mcptool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
shell-words = "1.1"
rustyline = "16.0"
tenx-mcp = { path = "../tenx-mcp/crates/tenx-mcp" }
#tenx-mcp = { git = "https://github.com/tenxhq/tenx-mcp.git", rev = "aa9030a"}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
termcolor = "1.4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.98"
vergen-gix = { version = "1.0.9", features = ["build"] }
