[package]
name = "mcptool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
shell-words = "1.1"
rustyline = "16.0"
tenx-mcp = { path = "../tenx-mcp/crates/tenx-mcp" }
#tenx-mcp = { git = "https://github.com/tenxhq/tenx-mcp.git", rev = "aa9030a"}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
termcolor = "1.4.1"
terminal_size = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
thiserror = "2.0"
open = "5.3"
url = "2.5"
oauth2 = { version = "5.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
anyhow = "1.0.98"
vergen-gix = { version = "1.0.9", features = ["build"] }
