[workspace.package]
version = "0.1.0"
edition = "2021"

authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "A swiss army knife for MCP"
license = "MIT"
repository = "https://github.com/tenxhq/mcptool"
keywords = ["mcp", "anthropic", "claude", "openai", "llm", "cli"]

[workspace]
resolver = "2"
members = ["crates/*"]


